--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,5 +71,8 @@ header #countdown {
 #score-form {
     display: none;
     margin: 50px;
-    font-size: 20px;
+}
+
+div form label {
+    font-size: 30px;
 }
